2008-08-25  Sam Weinig  <sam@webkit.org>

Reviewed by Mark Rowe.

        Fix https://bugs.webkit.org/show_bug.cgi?id=20377
        Leak in XMLHttpRequest.

        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::makeCrossSiteAccessRequestWithPreflight):



Canonical link: https://commits.webkit.org/28332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35927 268f45cc-cd09-0410-ab3c-d52691b4dbfc