WebCore/xml/XMLHttpRequest.cpp
@@ -626,8 +626,10 @@ void XMLHttpRequest::makeCrossSiteAccessRequestWithPreflight(ExceptionCode& ec)
     PreflightResultCache::iterator cacheIt = preflightResultCache().find(std::make_pair(origin, url));
     if (cacheIt != preflightResultCache().end()) {
         skipPreflight = canSkipPrelight(cacheIt, m_includeCredentials, m_method, m_requestHeaders);
-        if (!skipPreflight)
+        if (!skipPreflight) {
+            delete cacheIt->second;
             preflightResultCache().remove(cacheIt);
+        }
     }
 
     if (!skipPreflight) {
